# net-reduce

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.nix
.github/workflows/: build.yml  lint.yml  release.yml  rust.yml
src/: cidr.rs  cli.rs  input.rs  lib.rs  main.rs  output.rs  output_format.rs  parse.rs  reduce.rs  reduce_prefix_list.rs  reduce_trie.rs
tests/: integration_test.rs
