[package]
name = "net-reduce"
version = "0.1.2"
edition = "2024"

[dependencies]
ipnet = "2.11.0"
rayon = "1.10.0"

anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.43", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }

[dev-dependencies]
tempfile = "3.15.0"

[features]
default = ["anyhow", "clap", "serde_json", "serde_yaml"]
lib = []
