[package]
name = "net-reduce"
version = "0.1.4"
edition = "2024"

[dependencies]
ipnet = "2.12.0"
rayon = "1.12.0"

anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
serde_yaml = { version = "0.9.34", optional = true }

[dev-dependencies]
tempfile = "3.27.0"

[features]
default = ["anyhow", "clap", "serde_json", "serde_yaml"]
lib = []
